lib/open_ehr/parser/adl.tt
require 'shared_token'
require 'dadl'
require 'cadl'

grammar ADLSyntax

  include SharedToken
  include DADL
  include CADL

  rule archetype
    arch_identification
    arch_specialisation?
    arch_concept
    arch_language?
    arch_description?
    arch_definition
    arch_invariant?
    arch_ontology {
      def archetype_id
        arch_identification.archetype_id
      end
    }
  end

  rule arch_identification
    arch_head V_ARCHETYPE_ID space {
      def archetype_id
        self.V_ARCHETYPE_ID.text_value
      end
    }
  end

  rule arch_head
    SYM_ARCHETYPE arch_meta_data?
  end

  rule arch_meta_data
    '(' arch_meta_data_items ')' space
  end

  rule arch_meta_data_items
    arch_meta_data_item (';' arch_meta_data_item)*
  end

  rule arch_meta_data_item
    SYM_ADL_VERSION SYM_EQ V_VERSION_STRING
  / SYM_IS_CONTROLLED
  end

  rule arch_specialisation
    SYM_SPECIALIZE V_ARCHETYPE_ID space
  end

  rule arch_concept
    SYM_CONCEPT V_LOCAL_TERM_CODE_REF space
  end

  rule arch_language
    SYM_LANGUAGE V_DADL_TEXT space
  end

  rule arch_description
    SYM_DESCRIPTION V_DADL_TEXT space
  end

  rule arch_definition
    SYM_DEFINITION V_CADL_TEXT space
  end

  rule arch_invariant
    SYM_INVARIANT V_ASSERTION_TEXT space
  end

  rule arch_ontology
    SYM_ONTOLOGY V_DADL_TEXT space
  end
end
